Fix: Familienportal's "contact flap" is overlapping EGR content

--- a/src/styles/typo.css
+++ b/src/styles/typo.css
@@ -2,6 +2,13 @@
   @apply text-base;
 }
 
+@media only screen and (min-width: 640px) {
+  #egr-root {
+    /* make space for the "contact flap" of the Familienportal */
+    @apply mr-56;
+  }
+}
+
 #egr-root button,
 #egr-root select,
 #egr-root input {
